# hummingbird

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  coverage.xml  pyproject.toml
.github/workflows/: release.yml
src/hummingbird/: __init__.py  auth.py  config.py  download.py  formats.py  formats.yaml  main.py  models.py  plugins.py  storage.py
src/hummingbird/protocols/: __init__.py
src/hummingbird/protocols/hummingbird/: router.py
src/hummingbird/protocols/kados/: methods.py  router.py
tests/: test_auth.py  test_basic.py  test_download.py  test_plugin_active.py  test_plugins.py  test_router_hummingbird.py  test_router_kados.py  test_storage.py
