[project]
name = "hummingbird"
version = "0.1.7"
description = "Accessible-library HTTP server with a plugin architecture and a Kados-compatible RPC surface"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.scripts]
hummingbird = "hummingbird.main:run"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=7.1.0",
  "ruff>=0.7",
]
# Note on plugins: hummingbird has no hard dependency on any specific
# plugin. Production users install whichever plugin they want at deploy
# time (`pip install nnels`, etc.) on top of the runtime image. For
# local end-to-end testing, a dev can layer the editable nnels checkout
# on top of the synced env with `uv pip install --editable ../nnels` —
# we deliberately don't bake that into pyproject.toml because CI
# checkouts don't have a sibling nnels directory and `uv sync --frozen`
# would fail on the missing path.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hummingbird"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/hummingbird"]

[tool.coverage.report]
# 65% gate. Real coverage with branch on is ~70% as of v0.1.7;
# 5-point buffer absorbs short-term drift when new code lands
# ahead of its tests. Push this number up over time as the
# kados protocol surface (currently ~30%) gets test coverage.
fail_under = 65
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

